...
     * the second one will display a notification.
     *
     * @Param service, the notification service that will post
     */
    @Composable
    fun DisplayRandomActivity(service: RandomActivityNotificationService) {
        val currentActivity = ProcrastinationActivity("Test", "test description")

        val context = LocalContext.current
        var hasNotificationPermission by remember {
            if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU) {
                mutableStateOf(
                    ContextCompat.checkSelfPermission(
...
